<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_20"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:gravity="center"
            android:text="@string/palm_already_registered"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text="@string/palm_already_registered_info"
            android:textColor="@color/light_black"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/llImgBG"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_plam_not_recognized_55"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="3dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivStudent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:shapeAppearance="@style/CornerRadius_20" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_semi_bold"
            android:gravity="center"
            android:maxLines="4"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvClassSec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_semi_bold"
            android:gravity="center"
            android:maxLines="2"
            android:textColor="@color/dark_gray"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvDismiss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/ripple_effect_gray_20"
            android:fontFamily="@font/montserrat_semi_bold"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/dismiss"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>