<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_light_white_20"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_semi_bold"
                android:gravity="center"
                android:text="@string/search_by_palm"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/ivDismiss"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="end"
                android:src="@drawable/ic_close" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_20"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:id="@+id/llImgBG"
                    android:layout_width="270dp"
                    android:layout_height="270dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/bg_plam_not_recognized_55"
                    android:orientation="vertical"
                    android:padding="6dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/ivStudent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:padding="6dp"
                        app:shapeAppearance="@style/CornerRadius_20" />

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/lavAnimInit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="visible"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/loading" />

                    <LinearLayout
                        android:id="@+id/llLavBorder"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_blue_male_55"
                        android:orientation="vertical"
                        android:padding="6dp">

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/lavAnimRecog"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/bg_white_55"
                            android:visibility="visible"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/loading_face" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui"
                    android:gravity="center"
                    android:maxLines="3"
                    android:minLines="2"
                    android:text="@string/device_disconnected"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvClassSec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/segoeui"
                    android:gravity="center_horizontal"
                    android:maxLines="3"
                    android:minLines="3"
                    android:text="@string/palm_detection_device_info"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llDeviceConnect"
                android:layout_width="match_parent"
                android:layout_height="495dp"
                android:background="@drawable/ripple_effect_thin_gray_20"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvDeviceStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:gravity="center"
                        android:text="@string/device_disconnected"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvDeviceInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:gravity="center"
                        android:text="@string/tap_here_to_connect"
                        android:textColor="@color/black"
                        android:textSize="9sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/ivDeviceStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/device_disconnected" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>